# orenew

./: .env.example  .gitignore  ARCHITECTURE_AND_PLAN_PROMPT.md  BUG_FIX_PLAN.md  CLAUDE.md  CLIENT_DEMO_STATUS.md  IMPLEMENTATION_PROMPT.md  IMPLEMENTATION_TASKS.md  PERFORMANCE_TARGETS.md  README.md  ROADMAP.md  index.html  magnet-lens-preview.html  magnet_session_log.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
blueprint/orenew-marketing-store-site/: plan-orenew-marketing-store-site.md
docs/: lightroom.md  supabase.md
docs/supabase/: entitlements.sql
docs/superpowers/specs/: 2026-06-19-ui-redesign-design.md
src/: App.tsx  constants.ts  i18n.ts  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  db.rs  json_store.rs  lib.rs  main.rs
src-tauri/src/auth/: client.rs  device.rs  entitlement.rs  entitlement_token.rs  jwt.rs  mod.rs  provision.rs  session.rs
src-tauri/src/batch/: processing.rs
src-tauri/src/canvas/: compositor.rs
src-tauri/src/commands/: auth.rs  batch.rs  canvas_preset.rs  export.rs  faces.rs  frame_preset.rs  gallery.rs  license.rs  mod.rs  project.rs
src-tauri/src/exif/: mod.rs
src-tauri/src/license/: mod.rs  validator.rs
src-tauri/src/photo/: batch.rs  compose.rs  crop.rs  encode.rs  export.rs  frame.rs  imageops.rs  loader.rs  mod.rs  orientation.rs
src-tauri/src/preview/: canvas_preview.rs  framed_preview.rs  mod.rs  thumbnail.rs
src-tauri/src/project/: model.rs  persistence.rs
src-tauri/src/tests/: db.rs  mod.rs
src-tauri/src/watcher/: fs_watcher.rs
src/components/: ActionBar.tsx  BatchTabs.tsx  CanvasPresetForm.tsx  CanvasPresetManager.tsx  CanvasPreview.tsx  DeviceManagerDialog.tsx  EmptyState.tsx  EventConfigDialog.tsx  ExportDialog.tsx  ExportPreview.tsx  FramePresetDialog.tsx  Gallery.tsx  GalleryToolbar.tsx  Lightbox.tsx  PhotoCard.tsx  PreviewPanel.tsx  PrintConfirmDialog.tsx  ProcessDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  Toolbar.tsx  ViewControls.tsx  icons.tsx  ui.tsx
src/hooks/: useAsyncForm.ts  useAuthDeepLink.ts  useCanvasPage.ts  useExportProgress.ts  useFrameThumbnail.ts  useFramedPreview.ts  useFsWatcher.ts  useSaveProgress.ts  useThumbnail.ts  useUpdater.ts
src/lib/: auth.ts  paths.ts  reorder.ts  selection.ts  supabase.ts  tiers.ts
src/locales/: en.ts  he.ts
supabase/functions/: deno.json
supabase/functions/_shared/: auth.ts  jwt.ts
supabase/functions/disconnect-device/: index.ts
supabase/functions/issue-entitlement/: index.ts
