[package]
name = "magnet"
version = "0.1.0"
description = "MagNet — batch photo framing for event photographers"
authors = []
edition = "2021"

[lib]
name = "magnet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "tiff"] }

# EXIF / XMP
kamadak-exif = "0.5"
quick-xml = { version = "0.36", features = ["serialize"] }

# Async / parallelism
tokio = { version = "1", features = ["full"] }
rayon = "1"

# File watching
notify = { version = "7", features = ["serde"] }

# Hashing / licensing
sha2 = "0.10"
hmac = "0.12"
base32 = "0.5"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
