[package]
name = "orenew"
version = "0.1.0"
description = "Orenew — batch photo framing for event photographers"
authors = []
edition = "2021"

[lib]
name = "orenew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "tiff"] }
# SIMD crop+resize for the export hot path (pure Rust)
fast_image_resize = "5"

# EXIF
kamadak-exif = "0.5"

# Async / parallelism
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
rayon = "1"

# Supabase auth + REST client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Supabase JWT verification against the public JWKS endpoint (asymmetric keys);
# also verifies our EdDSA-signed entitlement tokens (v9 has EdDSA built in).
jsonwebtoken = "9"
# Stable per-machine id for device binding (license seat enforcement).
machine-uid = "0.5"
# Human-readable device label (name + OS) shown in the device picker.
whoami = "1"

# File watching
notify = { version = "7", features = ["serde"] }

# Hashing (used by photo/loader.rs content hashing)
sha2 = "0.10"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
rustface = "0.1.7"

# Desktop-only: forward the orenew:// OAuth callback to the running app
# (with the deep-link feature) instead of spawning a second window.
[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
# Signed auto-updates (desktop only). Verifies update artifacts against the
# pubkey in tauri.conf.json; private signing key is build-env only.
tauri-plugin-updater = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Keep `tauri dev` usable for image work: our own code compiles fast at O1,
# while dependencies (image, zune-jpeg, png, rayon…) get full optimization.
# Without this, JPEG decode/resize in debug is 10-50× slower than release.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
